@@ -1,5 +1,6 @@
 package it.aboutbits.checkstyle;
 
+import org.jspecify.annotations.NullMarked;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -7,6 +8,7 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@NullMarked
 class JspecifyOnTopLevelTypesCheckTest extends CheckTestSupport {
 
     private static final String BASE = "/it/aboutbits/checkstyle/jspecifyOnTopLevelTypes/";
@@ -33,7 +35,7 @@ class JspecifyOnTopLevelTypesCheckTest extends CheckTestSupport {
     void classWithoutJspecifyAnnotationFails() throws Exception {
         var v = runCheck(JspecifyOnTopLevelTypesCheck.class, BASE + "BadMissing.java");
         assertEquals(1, v.size());
-        assertTrue(v.get(0).contains("BadMissing"), v.toString());
+        assertTrue(v.getFirst().contains("BadMissing"), v.toString());
     }
 
     @Test
@@ -52,6 +54,6 @@ class JspecifyOnTopLevelTypesCheckTest extends CheckTestSupport {
     void recordWithoutJspecifyFails() throws Exception {
         var v = runCheck(JspecifyOnTopLevelTypesCheck.class, BASE + "BadRecord.java");
         assertEquals(1, v.size());
-        assertTrue(v.get(0).contains("BadRecord"), v.toString());
+        assertTrue(v.getFirst().contains("BadRecord"), v.toString());
     }
 }
